--- a/travel.html
+++ b/travel.html
@@ -32,7 +32,7 @@
 		<div class="small-container1">
 			<div class="row">
 			<div class="column3">
-				<img src="Hongkong.jpg">
+				<img src="hongkong.jpg">
 				<h3>Hongkong</h3>
 			</div>
 			<div class="column3">
