--- a/travel1.html
+++ b/travel1.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>TRAVEL</title>
-	<link rel="stylesheet" href="travel1.css">
+	<link rel="stylesheet" href="travels.css">
 </head>
 <body>
 	 				<!---------------- TOP ------------------->
